All_Component_DX/force-app/main/default/objects/SM_IoT_Field_Mapping__c/SM_IoT_Field_Mapping__c.object-meta.xml
<CustomObject>
    <description>Store the field mapping details for custom event.</description>
    <label>IoT Field Mapping</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>IoT Field Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IoT Field Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>