All_Component_DX/force-app/main/default/objects/SM_IoT_Field_Mapping__c/fields/SM_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>SM_Event_Name__c</fullName>
    <label>Event Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>