All_Component_DX/force-app/main/default/objects/SM_IoT_Field_Mapping__c/fields/SM_IoT_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>SM_IoT_Event_Id__c</fullName>
    <description>Stores the event name as Id.</description>
    <externalId>true</externalId>
    <inlineHelpText>Identifier for an event mapping.</inlineHelpText>
    <label>IoT Event Id</label>
    <length>225</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>