All_Component_DX/force-app/main/default/objects/SM_IoT_Field_Mapping__c/fields/SM_JSON_Payload__c.field-meta.xml
<CustomField>
    <fullName>SM_JSON_Payload__c</fullName>
    <label>JSON Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>